--- a/locales/tr.json
+++ b/locales/tr.json
@@ -38,7 +38,7 @@
     "coldMeze": [
       { "name": "SET SOĞUK MEZE (12 ÇEŞİT)", "price": "500", "desc": "Geleneksel tariflerle hazırlanan, sofranıza renk katan 12 farklı taze meze seçkisi.", "note": "Kişi Başı", "image": "/salataa.jpg" },
       { "name": "HUMUS", "price": "100", "desc": "Altın sarısı tahin ve özenle haşlanmış nohutun ipeksi buluşması.", "image": "/humus.jpg" },
-      { "name": "YOĞURT", "price": "100", "desc": "Kendi yöremizden, tam yağlı ve taze köy tipi süzme yoğurt.", "image": "/logo.png" },
+      { "name": "YOĞURT", "price": "100", "desc": "Kendi yöremizden, tam yağlı ve taze köy tipi süzme yoğurt.", "image": "/yogurt.jpeg" },
       { "name": "CACIK", "price": "100", "desc": "Taze tarla salatalıkları, sarımsak ve nanenin ferahlatan uyumu.", "image": "/cacık.jpg" },
       { "name": "TAHİN", "price": "100", "desc": "Bol limon ve sarımsakla lezzetlendirilmiş gerçek Kıbrıs usulü tahin.", "image": "/tahin.jpg" },
       { "name": "HAYDARİ", "price": "100", "desc": "Taze dereotu ve özel baharatlarla harmanlanmış yoğun kıvamlı lezzet.", "image": "/trator.jpg" },
@@ -50,10 +50,10 @@
       { "name": "PANCAR", "price": "100", "desc": "Özel sirkeli sosunda dinlendirilmiş, iştah açıcı taze pancar dilimleri.", "image": "/pancar-salatası.jpg" },
       { "name": "PEMBE SULTAN", "price": "100", "desc": "Pancarın yoğurtla buluştuğu, rengiyle ve tadıyla büyüleyen özel meze.", "image": "/pancar-salatası.jpg" },
       { "name": "MISIRLI TON BALIĞI", "price": "100", "desc": "Okyanus esintili ton balığının tatlı mısır taneleriyle mükemmel birlikteliği.", "image": "/ton-balıklı-mısırlı-salata.jpg" },
-      { "name": "KÖZLENMİŞ BİBER", "price": "100", "desc": "Odun ateşinde közlenmiş, zeytinyağlı ve sarımsaklı kapya biber.", "image": "/logo.png" },
-      { "name": "KÖZLENMİŞ PATLICAN", "price": "100", "desc": "Ateşin isli kokusunu taşıyan, pürüzsüz kıvamlı köz patlıcan ezmesi.", "image": "/logo.png" },
-      { "name": "YENGEÇ SALATASI", "price": "100", "desc": "Deniz mahsulleri tutkunları için özel soslu taze yengeç eti.", "image": "/logo.png" },
-      { "name": "ÇAKISDEZ", "price": "100", "desc": "Kıbrıs sofralarının vazgeçilmezi, kekikli ve sarımsaklı kırma yeşil zeytin.", "image": "/logo.png" }
+      { "name": "KÖZLENMİŞ BİBER", "price": "100", "desc": "Odun ateşinde közlenmiş, zeytinyağlı ve sarımsaklı kapya biber.", "image": "/kozlenmisbiber.jpeg" },
+      { "name": "KÖZLENMİŞ PATLICAN", "price": "100", "desc": "Ateşin isli kokusunu taşıyan, pürüzsüz kıvamlı köz patlıcan ezmesi.", "image": "/kozlenmispatlıcan.jpeg" },
+      { "name": "YENGEÇ SALATASI", "price": "100", "desc": "Deniz mahsulleri tutkunları için özel soslu taze yengeç eti.", "image": "/yengecsalatası.jpeg" },
+      { "name": "ÇAKISDEZ", "price": "100", "desc": "Kıbrıs sofralarının vazgeçilmezi, kekikli ve sarımsaklı kırma yeşil zeytin.", "image": "/cakısdez.jpeg" }
     ],
     "hotMeze": [
       { "name": "SET SICAK MEZE", "price": "500", "desc": "Sıcak servis edilen en sevilen ara sıcaklarımızın zengin kombinasyonu.", "note": "Kişi Başı", "image": "/avcı-boregi.jpg" },
@@ -69,7 +69,7 @@
       { "name": "PATATES CİPSİ", "price": "350", "desc": "İncecik dilimlenmiş, altın renginde kızarmış ev yapımı çıtır patatesler.", "image": "/patates-cipsi.jpg" }
     ],
     "grills": [
-      { "name": "YOĞURTLU BEYTİ", "price": "650", "desc": "Özel soslu lavaşa sarılı kebap, taze yoğurt ve kızgın tereyağı eşliğinde.", "image": "/adana-kebabı.jpg" },
+      { "name": "YOĞURTLU BEYTİ", "price": "650", "desc": "Özel soslu lavaşa sarılı kebap, taze yoğurt ve kızgın tereyağı eşliğinde.", "image": "/yogurtlubeyti.jpeg" },
       { "name": "ET ŞİŞ", "price": "600", "desc": "Özenle seçilmiş dana etlerinin lokum gibi yumuşacık ızgara hali.", "image": "/et-şiş.jpg" },
       { "name": "TAVUK ŞİŞ", "price": "600", "desc": "Marine edilmiş tavuk göğüs etlerinin köz ateşinde nar gibi kızarmış formu.", "image": "/tavuk-şiş.jpg" },
       { "name": "TAVUK KANAT", "price": "600", "desc": "Çıtır derisi ve sulu etiyle ızgaranın en keyifli hali.", "image": "/tavuk-kanat.jpg" },
@@ -85,26 +85,26 @@
     "fish": [
       { "name": "KALAMAR TAVA", "price": "600", "desc": "Altın sarısı panelenmiş, özel tarator sosuyla servis edilen çıtır kalamarlar.", "image": "/kalamar-tava.jpg" },
       { "name": "KALAMAR FOLYO", "price": "650", "desc": "Tereyağı ve taze baharatlarla folyoda buğulama usulü pişmiş yumuşacık kalamar.", "image": "/kalamar-folyo.jpg" },
-      { "name": "KALAMAR HELLİMLİ", "price": "700", "desc": "Hellim peyniri ile doldurulmuş, ızgarada lezzet patlaması yaşatan özel kalamar.", "image": "/kalamar-folyo.jpg" },
+      { "name": "KALAMAR HELLİMLİ", "price": "700", "desc": "Hellim peyniri ile doldurulmuş, ızgarada lezzet patlaması yaşatan özel kalamar.", "image": "/hellimlikalamar.jpeg" },
       { "name": "SİBYA KIZARTMA", "price": "650", "desc": "Derin denizlerden gelen taze sibyanın en çıtır ve en lezzetli kızartma hali.", "image": "/sipya.jpg" },
-      { "name": "AHTAPOT TAVA", "price": "700", "desc": "Özel marine edilmiş ahtapot kollarının dışı çıtır içi sulu tavadaki hali.", "image": "/ahtapot-güveç.jpg" },
+      { "name": "AHTAPOT TAVA", "price": "700", "desc": "Özel marine edilmiş ahtapot kollarının dışı çıtır içi sulu tavadaki hali.", "image": "/ahtabottava.jpeg" },
       { "name": "AHTAPOT GÜVEÇ", "price": "700", "desc": "Toprak güveçte, sebzeler ve özel sosuyla demlenerek pişmiş ahtapot.", "image": "/ahtapot-güveç.jpg" },
       { "name": "MİDYE KIZARTMA", "price": "550", "desc": "Çıtır pane kaplamalı, yanında sosuyla sunulan lezzetli midye taneleri.", "image": "/midye-tava.jpg" },
       { "name": "FISH & CHIPS", "price": "700", "desc": "Klasik İngiliz usulü, özel soslu pane balık ve yanında çıtır patatesler.", "image": "/fish-and-chips.jpg" },
       { "name": "KARİDES GÜVEÇ", "price": "700", "desc": "Bol tereyağlı, sarımsaklı ve üzerinde erimiş kaşar peyniriyle sunulan karides.", "image": "/karides-guvec.jpg" },
       { "name": "KARİDES KIZARTMA", "price": "650", "desc": "Hafif ve çıtır kaplamalı, atıştırmalık tadında taze karidesler.", "image": "/karides-guvec.jpg" },
-      { "name": "MANTARLI KARİDES", "price": "700", "desc": "Kültür mantarı ve taze karideslerin kremsi sosla mükemmel uyumu.", "image": "/karides-guvec.jpg" },
-      { "name": "ORFO", "price": "900", "desc": "Akdeniz'in en asil balığı; ızgarada mühürlenmiş taptaze orfoz fileto.", "image": "/balık-tabagı-buyuk.jpg" },
-      { "name": "LEVREK", "price": "700", "desc": "Denizlerin prensi levreğin, ızgara ateşinde pişen taze ve beyaz eti.", "image": "/balık-tabagı-kucuk.jpg" },
-      { "name": "FOLYODA LEVREK", "price": "750", "desc": "Kendi suyunda, sebzeler ve baharatlarla folyoda hapsolmuş lezzet.", "image": "/balık-tabagı-buyuk.jpg" },
+      { "name": "MANTARLI KARİDES", "price": "700", "desc": "Kültür mantarı ve taze karideslerin kremsi sosla mükemmel uyumu.", "image": "/mantarlıkarides.jpeg" },
+      { "name": "ORFO", "price": "900", "desc": "Akdeniz'in en asil balığı; ızgarada mühürlenmiş taptaze orfoz fileto.", "image": "/orfo.jpeg" },
+      { "name": "LEVREK", "price": "700", "desc": "Denizlerin prensi levreğin, ızgara ateşinde pişen taze ve beyaz eti.", "image": "/levrek.jpeg" },
+      { "name": "FOLYODA LEVREK", "price": "750", "desc": "Kendi suyunda, sebzeler ve baharatlarla folyoda hapsolmuş lezzet.", "image": "/folyadalevrek.jpeg" },
       { "name": "ÇUPRA", "price": "700", "desc": "Izgaranın vazgeçilmezi, taze deniz çipurasının eşsiz tadı.", "image": "/çipura.jpg" },
       { "name": "SPESİYAL ÇUPRA", "price": "750", "desc": "Şefimizin gizli tarifi ve özel sosuyla hazırlanan gurme çipura.", "image": "/çipura.jpg" },
       { "name": "VOPPA", "price": "600", "desc": "Mevsimine göre en taze haliyle sunulan yerel deniz balığı lezzeti.", "image": "/voppa.jpg" },
-      { "name": "MİNERİ", "price": "750", "desc": "Sert ve lezzetli etiyle bilinen, Akdeniz'in özel minerisi.", "image": "/balık-tabagı-buyuk.jpg" },
-      { "name": "SOKAN", "price": "600", "desc": "Kızgın yağda çıtır çıtır pişmiş, yöresel sokan balığı keyfi.", "image": "/balık-tabagı-kucuk.jpg" },
+      { "name": "MİNERİ", "price": "750", "desc": "Sert ve lezzetli etiyle bilinen, Akdeniz'in özel minerisi.", "image": "/mineri.jpeg" },
+      { "name": "SOKAN", "price": "600", "desc": "Kızgın yağda çıtır çıtır pişmiş, yöresel sokan balığı keyfi.", "image": "/sokan.jpeg" },
       { "name": "SOMON", "price": "700", "desc": "Omega-3 deposu, ızgarada içi sulu dışı mühürlü somon fileto.", "image": "/somon.jpg" },
-      { "name": "MERCAN", "price": "600", "desc": "Narin ve tatlımsı etiyle denizden tabağınıza mercan balığı.", "image": "/balık-tabagı-kucuk.jpg" },
-      { "name": "BARBUN", "price": "650", "desc": "Kaya barbunlarının tavada altın renginde parlayan lezzeti.", "image": "/balık-tabagı-buyuk.jpg" }
+      { "name": "MERCAN", "price": "600", "desc": "Narin ve tatlımsı etiyle denizden tabağınıza mercan balığı.", "image": "/mercan.jpeg" },
+      { "name": "BARBUN", "price": "650", "desc": "Kaya barbunlarının tavada altın renginde parlayan lezzeti.", "image": "/barbun.jpeg" }
     ],
     "combos": [
       { "name": "KARIŞIK ET TABAĞI (4 KİŞİLİK)", "price": "2800", "desc": "Dört kişilik dev porsiyon; tüm ızgara çeşitlerimizin bir arada olduğu aile boyu ziyafet.", "image": "/full-karısık-et.jpg" },
@@ -113,18 +113,18 @@
       { "name": "KARIŞIK BALIK TABAĞI (4 KİŞİLİK)", "price": "2900", "desc": "Kalabalık masalar için deniz mahsulleri festivali; en taze balık ve ara sıcaklar bir arada.", "image": "/balık-tabagı-buyuk.jpg" }
     ],
     "fixMenus": [
-      { "name": "FİX ET MEZE", "price": "900", "desc": "12 Çeşit soğuk meze ve tüm imza sıcak mezelerimizle dolu dolu bir başlangıç.", "image": "/avcı-boregi.jpg" },
-      { "name": "FİX BALIK MEZE", "price": "1100", "desc": "Denizden gelen 12 soğuk meze ve balık ağırlıklı gurme ara sıcaklar.", "image": "/karışık-balık-2gişi.jpg" },
-      { "name": "FİX ET MENÜ", "price": "1100", "desc": "Fix et meze içeriğine ek olarak ana yemekte karışık ızgara şöleni.", "image": "/full-karısık-et.jpg" },
-      { "name": "FİX BALIK MENÜ", "price": "1400", "desc": "Fix balık meze içeriğine ek olarak ana yemekte seçkin deniz balıkları.", "image": "/balık-tabagı-buyuk.jpg" }
+      { "name": "FİX ET MEZE", "price": "900", "desc": "12 Çeşit soğuk meze ve tüm imza sıcak mezelerimizle dolu dolu bir başlangıç.", "image": "/fix-menu.jpeg" },
+      { "name": "FİX BALIK MEZE", "price": "1100", "desc": "Denizden gelen 12 soğuk meze ve balık ağırlıklı gurme ara sıcaklar.", "image": "/fix-menu.jpeg" },
+      { "name": "FİX ET MENÜ", "price": "1100", "desc": "Fix et meze içeriğine ek olarak ana yemekte karışık ızgara şöleni.", "image": "/fix-menu.jpeg" },
+      { "name": "FİX BALIK MENÜ", "price": "1400", "desc": "Fix balık meze içeriğine ek olarak ana yemekte seçkin deniz balıkları.", "image": "/fix-menu.jpeg" }
     ],
     "beverages": [
       { "name": "COCA COLA", "price": "80", "desc": "Klasik ve ferahlatıcı kola, buz gibi servis edilir.", "image": "/coca-cola.jpg" },
       { "name": "FANTA", "price": "80", "desc": "Portakal aromalı gazlı meşrubat.", "image": "/fanta.jpg" },
       { "name": "SPRITE", "price": "80", "desc": "Limon-lime aromalı şeffaf gazlı meşrubat.", "image": "/sprite.jpg" },
       { "name": "ICE TEA", "price": "80", "desc": "Limon aromalı ferahlatıcı buzlu çay.", "image": "/fuse-tea.jpg" },
-      { "name": "MEYVE SUYU", "price": "80", "desc": "Taze sıkılmış mevsim meyvesi suyu.", "image": "/logo.png" },
-      { "name": "AYRAN", "price": "80", "desc": "Geleneksel Türk yoğurt içeceği, tuzlu ve soğuk servis edilir.", "image": "/logo.png" },
+      { "name": "MEYVE SUYU", "price": "80", "desc": "Taze sıkılmış mevsim meyvesi suyu.", "image": "/meyvesuyu.jpeg" },
+      { "name": "AYRAN", "price": "80", "desc": "Geleneksel Türk yoğurt içeceği, tuzlu ve soğuk servis edilir.", "image": "/ayran.jpeg" },
       { "name": "ŞALGAM", "price": "80", "desc": "Geleneksel fermente şalgam suyu, rakının mükemmel eşlikçisi.", "image": "/şalgam.jpg" },
       { "name": "MEYVELİ SODA", "price": "60", "desc": "Doğal meyve aromalı gazlı soda.", "image": "/sade-soda.jpg" },
       { "name": "SADE SODA", "price": "60", "desc": "Gazlı soda suyu, mükemmel bir karıştırıcı.", "image": "/sade-soda.jpg" },
@@ -132,9 +132,9 @@
       { "name": "KÜÇÜK SU (0.5L)", "price": "20", "desc": "Küçük boy doğal kaynak suyu.", "image": "/su.jpg" }
     ],
     "alcohol": [
-      { "name": "CARLSBERG", "price": "120", "desc": "Danimarka pilsner birası, ferah ve lezzetli.", "image": "/logo.png" },
-      { "name": "TUBORG", "price": "120", "desc": "Danimarka premium lager birası.", "image": "/logo.png" },
-      { "name": "PASQUA ŞARAP (75CL)", "price": "800", "desc": "İtalyan kırmızı şarabı, dolgun gövdeli ve zengin.", "image": "/logo.png" },
+      { "name": "CARLSBERG", "price": "120", "desc": "Danimarka pilsner birası, ferah ve lezzetli.", "image": "/calsberg.jpeg" },
+      { "name": "TUBORG", "price": "120", "desc": "Danimarka premium lager birası.", "image": "/tuborg.jpeg" },
+      { "name": "PASQUA ŞARAP (75CL)", "price": "800", "desc": "İtalyan kırmızı şarabı, dolgun gövdeli ve zengin.", "image": "/PASQUA ŞARAP.jpeg" },
       { "name": "YENİ RAKI (70CL)", "price": "1000", "desc": "Geleneksel Türk anasonlu içkisi.", "image": "/yeni-rakı.jpg" },
       { "name": "TEKİRDAĞ GOLD (70CL)", "price": "1400", "desc": "Premium kalite Türk rakısı, mükemmel olgunlaştırılmış.", "image": "/tekidağ-gold.jpg" },
       { "name": "RED LABEL (75CL)", "price": "1200", "desc": "Johnnie Walker Red Label harman İskoç viskisi.", "image": "/red-label.jpg" },
